--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "enzyme": "^3.1.1",
+    "enzyme-to-json": "^3.2.2",
     "react-scripts-ts": "2.7.0"
   },
   "scripts": {
