--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "coverage": "react-scripts-ts test --env=jsdom --coverage"
   },
   "jest": {
     "snapshotSerializers": ["enzyme-to-json/serializer"]
